# ejtag

./: .gitignore  .travis.yml  CmakeLists.txt  LICENSE  README.md
.travis/: run.sh
cmake/: ejtagmacros.cmake
embedded/include/ejtag/: ejtag.h  ejtag_buffer.h  ejtag_cmds.h  ejtag_dataparser.h  ejtag_debug.h  ejtag_platform.h
embedded/source/: foo.cpp  main_app.cpp
embedded/source/core/: cmd_processor.cpp  ejtag_buffer.cpp
embedded/source/debug/: debug_printf.cpp  debug_tiny.cpp
etc/vs2015/: readme.txt
libplatform/: CMakeLists.txt
libplatform/include/ejtag/platform/: ascii.h  assumptions.h  compiler.h  compiler_msft.h  config.h  cplusplus.h  debug.h  fifo.h  msft_constants.h  platdef_msft.h  platform.h  platform_defines.h  stdint.h  string.h  time.h  voidptr.h
libplatform/msft_windows/: msft_windows.c
libplatform/source/debug/: debug_cmdline.c  debug_hex.c  debug_memdump.c  debug_misc.c  debug_printf.c  debug_str.c  debug_vprintf.c  debug_write.c
libplatform/source/timer/: timer.c
libplatform/tests/: selftest_debug.c  selftest_timer.c
tools/creator/: cleanup.sh  creator.pyproj  creator.sln
tools/creator/libcreator/: __init__.py
tools/creator/libcreator/macros/: __init__.py  engine.py  parser.py  result.py  value.py  variables.py
tools/creator/libcreator/utils/: __init__.py  filelocation.py  frozenclass.py  platform_vars.py
tools/creator/tests/: main.py
